--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,8 +38,8 @@ html {
   /* rest of the colors */
   --black: #222;
   --white: #fff;
-  --red-light: #E8AA42;
-  --red-dark: #E57C23;
+  --red-light: #f0a5a0;
+  --red-dark: #f50505;
   --green-light: #F8F1F1;
   --green-dark: #025464;
 
